<resources>
    <string name="app_name">homework_2.14s</string>
    <string name="how_long">How long would be your string</string>
    <string name="string_1">String 1</string>
    <string name="string_2">String 2</string>
    <string name="string_3">String 3</string>
    <string name="generate">Generate</string>
    <string-array name="length">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
